--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Sebastián Meneses Flores
 logo: /assets/img/logo.png
-description: INTERESES: Investigación, optimización, análisis y diseño estructural, programación, sismorresistencia, IA, openseespy, parametric structures.
+description: "INTERESES: Investigación, optimización, análisis y diseño estructural, programación, sismorresistencia, IA, openseespy, parametric structures."
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
